js/src/tests/test262/language/expressions/dynamic-import/syntax/valid/new-covered-expression-is-valid.js
assert
.
throws
(
TypeError
(
)
=
>
{
new
(
import
(
'
'
)
)
}
)
;
assert
.
throws
(
TypeError
(
)
=
>
{
new
(
function
(
)
{
}
import
(
'
'
)
)
}
)
;
assert
.
sameValue
(
typeof
new
(
import
(
'
'
)
function
(
)
{
}
)
'
object
'
)
;
reportCompare
(
0
0
)
;
