js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-async-function-return-await-not-extensible-args.js
DONOTEVALUATE
(
)
;
async
function
f
(
)
{
return
await
import
(
'
.
/
empty_FIXTURE
.
js
'
{
}
'
'
)
;
}
